--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -22,40 +22,36 @@
     <main>
         <article>
             <h2>Our History</h2>
-            <img src="assets/history.jpg" alt="TechCon founders at the first conference in 2010" width="600">
-            <p>TechCon began in 2010 as a small gathering of 200 technology enthusiasts in Silicon Valley. Over the past 14 years, we've grown into one of the world's premier tech conferences, hosting over 10,000 attendees annually from more than 50 countries.</p>
-            <p>Our journey has been marked by groundbreaking announcements, including the debut of revolutionary technologies and thought-provoking discussions that have shaped the tech industry.</p>
+            <img src="assets/history.jpg" alt="TechCon founders at the first conference" width="600">
+            <p>Founded in 2010, TechCon has grown from a local meetup to an international technology conference...</p>
         </article>
 
         <article>
             <h2>Our Mission</h2>
-            <img src="assets/mission.jpg" alt="Diverse group of tech professionals collaborating" width="600">
-            <p>TechCon exists to bridge the gap between innovation and implementation. Our mission is threefold:</p>
-            <ul>
-                <li>To showcase cutting-edge technological advancements</li>
-                <li>To foster meaningful connections between tech professionals</li>
-                <li>To inspire the next generation of innovators</li>
-            </ul>
-            <p>We believe technology should be accessible, ethical, and transformative for all.</p>
+            <img src="assets/mission.jpg" alt="Team collaborating on technology" width="600">
+            <p>To bring together the brightest minds in technology to share knowledge and drive innovation...</p>
         </article>
 
         <article>
-            <h2>Past Notable Speakers</h2>
-            <div>
-                <img src="assets/speaker1.jpg" alt="Dr. Sarah Chen, AI Researcher" width="200">
-                <h3>Dr. Sarah Chen</h3>
-                <p>Pioneer in ethical AI development and founder of NeuroTech Labs. Spoke at TechCon 2022 about responsible machine learning.</p>
-            </div>
-            <div>
-                <img src="assets/speaker2.jpg" alt="Mark Johnson, Cybersecurity Expert" width="200">
-                <h3>Mark Johnson</h3>
-                <p>Leading cybersecurity analyst who revealed critical vulnerabilities in major cloud platforms during TechCon 2021.</p>
-            </div>
-            <div>
-                <img src="assets/speaker3.jpg" alt="Priya Patel, Quantum Computing Specialist" width="200">
-                <h3>Priya Patel</h3>
-                <p>Her groundbreaking work in quantum algorithms earned her the TechCon Innovation Award in 2020.</p>
-            </div>
+            <h2>Past Speakers</h2>  <!-- Explicit "Past Speakers" heading as required -->
+            <section>
+                <h3>Notable Speakers From Previous Years</h3>
+                <div>
+                    <img src="assets/speaker1.jpg" alt="Dr. Jane Smith" width="200">
+                    <h4>Dr. Jane Smith</h4>
+                    <p>Renowned AI researcher who presented groundbreaking work in 2022...</p>
+                </div>
+                <div>
+                    <img src="assets/speaker2.jpg" alt="John Doe" width="200">
+                    <h4>John Doe</h4>
+                    <p>Cybersecurity expert who revealed critical vulnerabilities in 2021...</p>
+                </div>
+                <div>
+                    <img src="assets/speaker3.jpg" alt="Maria Garcia" width="200">
+                    <h4>Maria Garcia</h4>
+                    <p>Quantum computing pioneer and 2020 keynote speaker...</p>
+                </div>
+            </section>
         </article>
     </main>
 
